# CGLA

./: .gitignore  CMakeLists.txt  README.md  linalg.cppm  linearAlgebra.cpp  linearAlgebra.h  playground.cpp
src/: linalg.cppm  linearAlgebra.cpp  main.cpp  meta.cppm  util.cppm
src/linalg/: pointer.cppm  reference.cppm  tensor.cppm  value.cppm
src/util/: common.cppm  meta.cppm
